--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "6.12.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js && cd client && npm start",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client",
     "setup": "npm i && cd client && npm i"
   },
